src/objects/Workforce_Management__c.object
<CustomObject>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <label>Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approving_Manager__c</fullName>
        <label>Approving Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_there_specific_Agents__c</fullName>
        <label>Are there specific Agents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_by_Date__c</fullName>
        <label>Completed by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Issue__c</fullName>
        <label>Date of Issue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday_Current_End__c</fullName>
        <label>Friday Current End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Friday_Current_Start__c</fullName>
        <label>Friday Current Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Friday_Desired_End__c</fullName>
        <label>Friday Desired End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Friday_Desired_Start__c</fullName>
        <label>Friday Desired Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_Training_Meeting__c</fullName>
        <label>Length of Training/ Meeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MondayCurrentStart__c</fullName>
        <label>Monday Current Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monday_Current_End__c</fullName>
        <label>Monday Current End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monday_Desired_End__c</fullName>
        <label>Monday Desired End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monday_Desired_Start__c</fullName>
        <label>Monday Desired Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Perm_or_Temp__c</fullName>
        <label>Perm or Temp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Perm</fullName>
                </value>
                <value>
                    <fullName>Temp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Please_list_name_s__c</fullName>
        <label>Please list name(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resource_Restrictions__c</fullName>
        <label>Resource Restrictions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Saturday_Current_End__c</fullName>
        <label>Saturday Current End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Saturday_Current_Start__c</fullName>
        <label>Saturday Current Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Saturday_Desired_End__c</fullName>
        <label>Saturday Desired End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Saturday_Desired_Start__c</fullName>
        <label>Saturday Desired Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shared_Services_Reqeust__c</fullName>
        <label>Shared Services Request</label>
        <referenceTo>Shared_Services_Requests__c</referenceTo>
        <relationshipLabel>Workforce Management</relationshipLabel>
        <relationshipName>Workforce_Management</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sunday_Current_End__c</fullName>
        <label>Sunday Current End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sunday_Current_Start__c</fullName>
        <label>Sunday Current Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sunday_Desired_End__c</fullName>
        <label>Sunday Desired End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sunday_Desired_Start__c</fullName>
        <label>Sunday Desired Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thursday_Current_End__c</fullName>
        <label>Thursday Current End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thursday_Current_Start__c</fullName>
        <label>Thursday Current Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thursday_Desired_End__c</fullName>
        <label>Thursday Desired End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thursday_Desired_Start__c</fullName>
        <label>Thursday Desired Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TuesdayCurrentStart__c</fullName>
        <label>Tuesday Current Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tuesday_Current_End__c</fullName>
        <label>Tuesday Current End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tuesday_Desired_End__c</fullName>
        <label>Tuesday Desired End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tuesday_Desired_Start__c</fullName>
        <label>Tuesday Desired Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Request__c</fullName>
        <label>Type of Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WednesdayCurrentStart__c</fullName>
        <label>Wednesday Current Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wednesday_Current_End__c</fullName>
        <label>Wednesday Current End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wednesday_Desired_End__c</fullName>
        <label>Wednesday Desired End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wednesday_Desired_Start__c</fullName>
        <label>Wednesday Desired Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times</valueSetName>
        </valueSet>
    </fields>
    <label>Workforce Management</label>
    <nameField>
        <displayFormat>WFM-{0000}</displayFormat>
        <label>Workforce Management Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workforce Management</pluralLabel>
    <recordTypes>
        <fullName>ADHERENCE_AND_ATTENDANCE</fullName>
        <active>true</active>
        <label>ADHERENCE AND ATTENDANCE</label>
    </recordTypes>
    <recordTypes>
        <fullName>Overtime_Request</fullName>
        <active>true</active>
        <label>Overtime Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Schedule_Change_Request</fullName>
        <active>true</active>
        <label>Schedule Change Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training_or_Meeting_Request</fullName>
        <active>true</active>
        <label>Training or Meeting Request</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>